# agent-skills

./: .gitignore  AGENTS.md  LICENSE  README.ja.md  README.md
.specs/harness-codex-backend/: design.md  requirement.md  tasks.md
.specs/harness-suite/: design.md  requirement.md
.specs/spec-rules-init/: tasks.md
.specs/spec-workflow-init/: tasks.md
docs/: coding-rules.md  issue-to-pr-workflow.md  review_rules.md  skill-style-guide.md
skills/agent-delegate/: SKILL.md
skills/cmux-delegate/: SKILL.md
skills/cmux-fork/: SKILL.md
skills/spec-inspect/: .gitignore  README.md  SKILL.md  pyproject.toml  requirements.txt
skills/spec-inspect/references/: abstract-process-check.ja.md  abstract-process-check.md  projection-consistency-check.ja.md  projection-consistency-check.md
skills/spec-inspect/references/scripts/tests/: check-projection-consistency-contract.sh  check-spec-writing-contract.sh
skills/spec-inspect/references/scripts/tests/fixtures/: abstract-process-cases.tsv  projection-contract.tsv  projection-mutations.tsv
skills/spec-inspect/references/scripts/tests/fixtures/projection-consistency/consistent/: design.md  requirement.md  tasks.md  test.md
skills/spec-inspect/src/spec_inspect/: __init__.py  cli.py
skills/spec-inspect/src/spec_inspect/core/: __init__.py  check_engine.py  file_loader.py  parser.py  report_generator.py
skills/spec-inspect/src/spec_inspect/models/: __init__.py  inspection_result.py  issue.py  parsed_document.py
skills/spec-inspect/src/spec_inspect/rules/: __init__.py  requirement_id_validator.py  structure_validator.py
(+286 files in other folders)
